# funhouse

./: .bazelrc  .gitattributes  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
client/: BUILD.bazel  main.go
concourse/: postsubmit.yml  presubmit.yml
fuse/: BUILD.bazel  file.go  fs.go  util.go
github/: BUILD.bazel  types.go  types_test.go
github/testdata/: push_response.json
proto/: BUILD.bazel  git_read_fs.proto
server/: BUILD.bazel  README.md  main.go
service/: BUILD.bazel  repo.go  service.go  types.go
tools/: workspace_status.sh
