load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/minorhacks/funhouse/client",
    visibility = ["//visibility:private"],
    deps = [
        "//fuse",
        "@com_github_golang_glog//:glog",
        "@com_github_hanwen_go_fuse//fuse/nodefs",
        "@com_github_hanwen_go_fuse//fuse/pathfs",
    ],
)
