load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fuse",
    srcs = [
        "file.go",
        "fs.go",
        "util.go",
    ],
    importpath = "github.com/minorhacks/funhouse/fuse",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:git_read_fs_proto_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_hanwen_go_fuse//fuse",
        "@com_github_hanwen_go_fuse//fuse/nodefs",
        "@com_github_hanwen_go_fuse//fuse/pathfs",
    ],
)
