load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

proto_library(
    name = "git_read_fs_proto",
    srcs = ["git_read_fs.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_grpc_library(
    name = "git_read_fs_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/minorhacks/funhouse/proto/git_read_fs_proto",
    protos = [":git_read_fs_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "git_read_fs_proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/minorhacks/funhouse/proto/git_read_fs_proto",
    proto = ":git_read_fs_proto",
    visibility = ["//visibility:public"],
)
