load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "funhouse_server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/minorhacks/funhouse/server",
    visibility = ["//visibility:private"],
    deps = [
        "//github",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_mux//:mux",
        "@com_github_kylelemons_godebug//pretty",
    ],
)
