load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")

go_binary(
    name = "funhouse_server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/minorhacks/funhouse/server",
    visibility = ["//visibility:private"],
    deps = [
        "//github",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_mux//:mux",
        "@com_github_kylelemons_godebug//pretty",
    ],
)

container_layer(
    name = "server_layer",
    directory = "app",
    files = [":funhouse_server"],
)

container_image(
    name = "funhouse_server_image",
    base = "@distroless_base//image",
    entrypoint = [
        "/app/funhouse_server",
    ],
    labels = {
        "org.opencontainers.image.source": "https://github.com/minorhacks/funhouse",
    },
    layers = [
        ":server_layer",
    ],
    stamp = True,
)

docker_push(
    name = "funhouse_server_image_push",
    image = ":funhouse_server_image",
    registry = "ghcr.io",
    repository = "minorhacks/funhouse_server",
    tag = "{STABLE_GIT_BRANCH}",
)
