load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "repo.go",
        "service.go",
        "types.go",
    ],
    importpath = "github.com/minorhacks/funhouse/service",
    visibility = ["//visibility:public"],
    deps = [
        "//github",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/filemode",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_golang_glog//:glog",
        "@com_github_kylelemons_godebug//pretty",
    ],
)
